crates/polychem/src/atoms/snapshots/polychem__atoms__chemical_composition__tests__composition_errors-2.snap
---
source: crates/polychem/src/atoms/chemical_composition.rs
description: "chemical_composition(\"NH2[99Tc]YhO4\")"
expression: out
---
  × expected a chemical formula (optionally followed by a '+' or '-' and a
  │ particle offset), or a standalone particle offset
  ├─▶   × expected an element (like Au) or an isotope (like [15N]) optionally
  │     │ followed by a number
  │   
  ╰─▶   × the element "Yh" could not be found in the supplied atomic database
        help: double-check for typos, or add a new entry to the atomic
      database
      
   ╭────
 1 │ NH2[99Tc]YhO4 
   ·          ─┬
   ·           ╰── element not found
   ╰────
